# chat-my-doc-data

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
src/ansible_qdrant/: README.md  ansible.cfg  backup-qdrant.yml  deploy-qdrant.yml  inventory.yml  manage-qdrant.yml  requirements.yml
src/ansible_qdrant/templates/: docker-compose.yml.j2  qdrant-config.yaml.j2  qdrant.service.j2
src/chat_my_doc_data/: main.py  push_doc_to_db.py  raw_data.py
src/infra/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
src/notebooks/: data_analysis.ipynb  qdrant_imdb.ipynb  qdrant_tuto.ipynb
tests/: conftest.py  test_push_doc_to_db.py
